--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
 @font-face {
   font-family: 'Century Gothic Regular';
-  src: local('Century Gothic Regular'),  url(./fonts/CenturyGothic-Regular.ttf) format('ttf');
+  src: local('Century Gothic Regular'),  url(./fonts/CenturyGothic-Regular.woff) format('woff');
 }
 
 html { 
