--- a/src/components/Work/index.css
+++ b/src/components/Work/index.css
@@ -2,10 +2,6 @@
     padding: 0 110px;
 }
 
-.work-container > h5 {
-    font-family: 'Century Gothic Regular';
-}
-
 .work-row {
     margin-top: 20px;
     display: flex;
@@ -27,10 +23,9 @@
     font-weight: bold;
 }
 
-.work-block > h6 {
-    margin-top: 0;
-    font-size: 15px;
-    font-family: 'Century Gothic Regular';
+.work-container > p {
+    font-size: 20px;
+    padding: 40px 0 40px 0;
 }
 
 .work-block > h5 {
@@ -39,6 +34,10 @@
     font-size: 16px;
     margin-top: 0;
     margin-bottom: 0;
+}
+
+h5.curator {
+    color: #545454;
 }
 
 p.work-first-number-block, p.work-second-number-block, p.work-third-number-block, p.work-third-number-block, p.work-fourth-number-block, p.work-fourth-number-block, p.work-fifth-number-block, p.work-sixth-number-block, p.work-seventh-number-block, p.work-eighth-number-block, p.work-eighth-number-block {
@@ -51,7 +50,6 @@ p.work-first-number-block, p.work-second-number-block, p.work-third-number-block
 }
 
 .work-progress-bar {
-    margin-top: 150px;
     position: relative;
 }
 
@@ -117,6 +115,7 @@ p.work-first-number-block, p.work-second-number-block, p.work-third-number-block
 
 .work-month {
     margin-top: 10px;
+    margin-bottom: 60px;
     display: flex;
     justify-content: space-between;
 }
@@ -161,6 +160,7 @@ p.work-first-number-block, p.work-second-number-block, p.work-third-number-block
 .work-report {
     display: flex;
     align-items: center;
+    padding-top: 40px;
     justify-content: space-between;
 }
 
@@ -175,7 +175,7 @@ p.work-first-number-block, p.work-second-number-block, p.work-third-number-block
 .report-title:before {
     position: absolute; 
     left: 91%;
-    bottom: 11.2em; 
+    top: 0; 
     content:'';
     border-top: 70px solid #F05A2B;
     border-left: 70px solid transparent;
@@ -184,7 +184,7 @@ p.work-first-number-block, p.work-second-number-block, p.work-third-number-block
 .report-title:after {
     position: absolute; 
     left: 90%;
-    bottom: 10em; 
+    top: -0.3em; 
     content:'';
     border-top: 100px solid #fff;
     border-left: 100px solid transparent;
@@ -214,6 +214,55 @@ p.work-first-number-block, p.work-second-number-block, p.work-third-number-block
     background-color: #F7F8FA;
 }
 
+@media screen and (min-width: 1700px)  {
+    .left-border, .middle-border, .right-border {
+        width: 17.6vw;
+    }
+
+    .report-title:before {
+        left: 93.3%;
+        bottom: 9.7em; 
+    }
+
+    .report-title:after {
+        left: 93.1%;
+        bottom: 8.2em;
+    }
+}
+
+@media only screen and (max-width: 1700px)  {
+    .left-border, .middle-border, .right-border {
+        width: 17.3vw;
+    }
+
+    .report-title:before {
+        left: 91%;
+        top: 0; 
+    }
+
+    .report-title:after {
+        left: 90%;
+        top: -0.7em; 
+    }
+}
+
+
+@media screen and (max-width: 1440px)  {
+    .left-border, .middle-border, .right-border {
+        width: 16.7vw;
+    }
+
+    .report-title:before {
+        left: 90.3%;
+        top: 0;
+    }
+
+    .report-title:after {
+        left: 89.2%;
+        top: -0.7em; 
+    }
+}
+
 @media only screen and (max-width: 1300px)  {
     .left-border, .middle-border, .right-border {
         width: 16.5vw;
@@ -233,22 +282,6 @@ p.work-first-number-block, p.work-second-number-block, p.work-third-number-block
     .report-title:after {
         left: 87.5%;
         bottom: 13.2em;
-    }
-}
-
-@media screen and (max-width: 1440px)  {
-    .left-border, .middle-border, .right-border {
-        width: 16.7vw;
-    }
-
-    .report-title:before {
-        left: 90.5%;
-        bottom: 12.7em; 
-    }
-
-    .report-title:after {
-        left: 90.3%;
-        bottom: 11.2em;
     }
 }
 
