some fixes / added date picker

--- a/src/components/AboutProject/index.css
+++ b/src/components/AboutProject/index.css
@@ -30,5 +30,11 @@
 .more-block {
     cursor: pointer;
     color: #F05929;
+    font-size: 17px;
+}
+
+.less-block {
+    cursor: pointer;
+    color: #F05929;
     font-size: 12px;
 }
