--- a/src/components/Prehistory/index.css
+++ b/src/components/Prehistory/index.css
@@ -5,6 +5,7 @@
 .prehistory-container p {
     font-family: 'Century Gothic Regular';
     padding-top: 2%;
+    padding-bottom: 3%;
 }
 
 .prehistory-container a {
