--- a/src/components/ModalWindow/index.css
+++ b/src/components/ModalWindow/index.css
@@ -1,6 +1,34 @@
 .ReactModal__Content--after-open {
-    width: 80%;
+    width: 100%;
     height: auto !important;
+}
+
+.ReactModal__Html--open,
+.ReactModal__Body--open {
+  overflow: hidden; /* prevents background page from scrolling when the modal is open */
+}
+
+.ReactModal__Overlay {
+    position: fixed;
+    z-index: 999999;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+  
+.ReactModal__Content {
+    background: white;
+    width: 75rem;
+    max-width: calc(100vw - 2rem);
+    max-height: calc(100vh - 2rem);
+    box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.25);
+    overflow-y: auto;
+    position: relative;
 }
 
 .modal .modal-title {
@@ -8,6 +36,10 @@
 }
 
 .more-block {
+    font-family: 'Century Gothic Bold';
+}
+
+.less-block {
     font-family: 'Century Gothic Bold';
 }
 
