--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -1,11 +1,29 @@
 .footer-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 20px 110px 20px 110px;
     background-color: #F7F8FA;
 }
 
 .footer-content {
+    width: 100%;
     border-top: 2px solid #f3f1f1;
     padding-top: 20px;
     display: flex;
     justify-content: space-between;
+}
+
+.footer-container h6 {
+    font-family: 'Century Gothic Regular';
+    font-weight: normal;
+    margin: 0;
+    padding: 0;
+    margin-top: 2%;
+}
+
+.copyright-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
