--- a/src/components/AboutProject/index.css
+++ b/src/components/AboutProject/index.css
@@ -38,3 +38,14 @@
     color: #F05929;
     font-size: 12px;
 }
+
+@media only screen and (max-width: 1000px) {
+    .about-project-container {
+        padding: 20px 15px;
+    }
+
+    .about-project-article {
+        border: 1px solid #F05929;
+        padding: 20px 15px;
+    }
+}
