--- a/src/components/Contacts/index.css
+++ b/src/components/Contacts/index.css
@@ -39,4 +39,14 @@ p.title-paragraph {
     width: 50%;
 }
 
+@media only screen and (max-width: 1000px) {
+    .contacts-container {
+        padding: 20px 15px;
+    }
+
+    .contacts-columns {
+        flex-direction: column;
+    }
+}
+
 
