--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -27,3 +27,33 @@
     flex-direction: column;
     align-items: center;
 }
+
+.mobile-support {
+    display: none;
+}
+
+@media only screen and (max-width: 1000px) {
+    .footer-container {
+        padding: 20px 15px;
+    }
+
+    .mobile-support {
+        display: block;
+    }
+
+    .web-support {
+        display: none;
+    }
+
+    .footer-content {
+        justify-content: center;
+    }
+
+    .footer-logo {
+        margin-right: 5%;
+    }
+
+    .copyright-container {
+        padding-top: 10px;
+    }
+}
