--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -5,6 +5,10 @@
 
 }
 
+.mobile-header-container {
+    display: none;
+}
+
 .line {
     width: 18vw;
     height: auto;
@@ -19,28 +23,76 @@
     display: inline;
 }
 
-.text-container {
+.header-container .text-container {
     padding-top: 50px;
 }
 
-.text-container h1 {
+.header-container .text-container h1 {
     color: #F05929;
     font-size: 3vw;
     text-transform: uppercase;
     font-weight: 400;
 }
 
-.text-container .supports {
+.header-container .text-container .supports {
     margin-top: 175px;
     margin-left: 250px;
     width: 31vw;
     height: auto;
 }
 
-.text-container h1:nth-child(1) {
+.header-container .text-container h1:nth-child(1) {
     margin-left: -50px;
 }
 
-.text-container h1:nth-child(2) {
+.header-container .text-container h1:nth-child(2) {
     margin-left: -25px;
+}
+
+@media only screen and (max-width: 1000px) {
+    .header-container {
+        display: none;
+    }
+
+    .mobile-header-container {
+        margin-top: 10%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .mobile-image-block {
+        display: flex;
+        align-items: baseline;
+    }
+
+    .mobile-header-container .text-container h1:nth-child(1) {
+        margin-left: -40px;
+    }
+    
+    .mobile-header-container .text-container h1:nth-child(2) {
+        margin-left: -20px;
+    }
+
+    .mobile-image-block img:first-child {
+        width: 50%;
+        height: auto;
+    }
+
+    .mobile-image-block img:nth-child(2) {
+        width: 50%;
+        height: 100%;
+    }
+
+    .mobile-header-container .text-container h1 {
+        color: #F05929;
+        font-size: 5vw;
+        text-transform: uppercase;
+        font-weight: 400;
+    }
+
+    .mobile-header-container .supports {
+        margin: 5% 0;
+        width: 90%;
+    }
 }
