--- a/src/components/Navbar/index.css
+++ b/src/components/Navbar/index.css
@@ -28,3 +28,115 @@
 .nav-container img {
     display: inline;
 }
+
+.burger-nav-container {
+    display: none;
+}
+
+.bm-burger-button {
+    position: absolute !important;
+    top: 30% !important; 
+    width: 36px;
+    height: 30px;
+    right: 36px;
+    left: 90% !important;
+    right: 0;
+}
+
+.bm-burger-bars {
+    background: #F05929 !important;
+}
+
+.bm-cross-button {
+    width: 40px !important;
+    height: 40px !important;
+}
+
+.bm-cross-button .bm-cross {
+    height: 30px !important;
+}
+
+.bm-item.nav-item {
+    display: flex !important;
+}
+
+.bm-item-list > img {
+    margin-bottom: 10%;
+}
+
+.bm-item.nav-item img {
+    margin-right: 3%;
+}
+
+/* Position and sizing of burger button */
+.bm-burger-button {
+    position: fixed;
+    width: 36px;
+    height: 30px;
+    left: 36px;
+    top: 36px;
+}
+  
+  
+/* Color/shape of burger icon bars on hover*/
+.bm-burger-bars-hover {
+    background: #a90000;
+}
+  
+/* Position and sizing of clickable cross button */
+.bm-cross-button {
+    height: 24px;
+    width: 24px;
+}
+  
+/* Color/shape of close button cross */
+.bm-cross {
+    background: #F05929;
+}
+  
+/*
+Sidebar wrapper styles
+Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
+*/
+.bm-menu-wrap {
+    position: fixed;
+    height: 100%;
+}
+  
+/* General sidebar styles */
+.bm-menu {
+    background: #FFFFFF;
+    padding: 2.5em 1.5em 0;
+    padding-top: 0;
+    font-size: 1.15em;
+}
+  
+/* Morph shape necessary with bubble or elastic */
+.bm-morph-shape {
+    fill: #373a47;
+}
+  
+/* Wrapper for item list */
+.bm-item-list {
+    color: #010101;
+    padding: 0.8em;
+}
+  
+/* Individual item */
+.bm-item {
+    display: inline-block;
+}
+  
+/* Styling of overlay */
+.bm-overlay {
+    background: rgba(0, 0, 0, 0.3);
+}
+
+@media only screen and (max-width: 1000px) {
+    .burger-nav-container {
+        display: block;
+    }
+    .nav-container {
+        display: none;
+    }
+}
