--- a/src/components/Prehistory/index.css
+++ b/src/components/Prehistory/index.css
@@ -15,3 +15,12 @@
 .prehistory-container a:hover {
     color: #f34a16;
 }
+
+
+@media only screen and (max-width: 1000px) {
+    .prehistory-container {
+        padding: 20px 15px;
+    }
+
+}
+
