--- a/src/components/Team/index.css
+++ b/src/components/Team/index.css
@@ -116,6 +116,12 @@
     }
 }
 
+@media only screen and (max-width: 1000px)  {
+    .team-block {
+        flex-direction: column;
+    }
+}
+
 @media only screen and (max-width: 990px)  {
     .team-personal-info {
         left: 10em;
