--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,10 @@ html {
   box-sizing: border-box;
 }
 
+* {
+  -webkit-tap-highlight-color: transparent;
+}
+
 ul[class],
 ol[class] {
   padding: 0;
