--- a/src/components/Navbar/index.css
+++ b/src/components/Navbar/index.css
@@ -43,6 +43,10 @@
     right: 0;
 }
 
+.bm-burger-button:focus {
+    background-color: initial;
+}
+
 .bm-burger-bars {
     height: 10% !important;
     background: #F05929 !important;
@@ -101,7 +105,8 @@ Note: Beware of modifying this element as it can break the animations - you shou
 */
 .bm-menu-wrap {
     position: fixed;
-    height: 100%;
+    height: 110vh !important;
+    z-index: 9999 !important;
 }
   
 /* General sidebar styles */
